# telegram-desktop

./: CMakeLists.txt  gen_source_list.sh  telegram-desktop.spec
.gear/: rules
locales/: download_locales.sh  lang_be.strings  lang_cz.strings  lang_fr.strings  lang_ru.strings  lang_tu.strings  lang_uk.strings
patches/: 0001-Fix-crash-in-video-player-seeking.patch  0001-use-correct-executable-path.patch  0001_add-cmake.patch  0003_qt-plugins.patch  0004_API-ID.patch  0005_Downgrade-Qt-version.patch  0007_cvefix.patch  0008_add_locales.patch  0014-get-language-name-and-country-name-from-QLocale.patch  0015-disable-resource-fonts.patch  0016-fix-lzma.patch  0017-ligsl-microsoft-fix.patch  0018-fix-linking.patch  try_force_russian.patch
qtlottie/: .tag
tdesktop/Telegram/SourceFiles/: mainwidget.cpp
tdesktop/Telegram/SourceFiles/base/: variant.h
tdesktop/Telegram/SourceFiles/info/media/: info_media_widget.cpp
tdesktop/Telegram/SourceFiles/mtproto/: dcenter.h
tdesktop/Telegram/SourceFiles/storage/cache/: storage_cache_database_object.h
